VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc6Down.err
[8MB/455.1MB][  1%][>                                                 ][4MB/s]  [16MB/455.1MB][  3%][=>                                                ][5.333MB/s]  [80MB/455.1MB][ 17%][========>                                         ][20MB/s]  [136MB/455.1MB][ 29%][==============>                                   ][27.2MB/s]  [192MB/455.1MB][ 42%][=====================>                            ][32MB/s]  [240MB/455.1MB][ 52%][==========================>                       ][34.29MB/s]  [304MB/455.1MB][ 66%][=================================>                ][38MB/s]  [360MB/455.1MB][ 79%][=======================================>          ][40MB/s]  [424MB/455.1MB][ 93%][==============================================>   ][42.4MB/s]  [455.1MB/455.1MB][100%][==================================================][45.51MB/s]  [455.1MB/455.1MB][100%][==================================================][45.51MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_49216/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_49216/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
